
what is schema? - 
it Basically validates database validation

In this schema we defined ,which field you have keeped in database like as name ,id ,address,brand,price,

if we  does not defines field in schema such as number . in this case,mongoose will denine to add undefined field

in schema we use type validation


What is Modal? -
Modal Basically connect Mongodb to nodejs

What is different between Modal and Schema ?
all field in database such as - name,class,number 
we have defined it Schema so that validation will be apply

but Modal Basically have used to schema and connect Mongodb to nodejs


lecture-40 CRUD with mongoose
  
lecture -41 Post APi With Mongoose 
      and then test api in Postman and thunder Client
  ///body kai threw data send kiya
{
  "name":"Mohit Sharma",
  "price":400,
  "brand":"Samsung",
  "category":"Mobbiles"
}


lecture 42 - GET,DELETE,and PUT method in mongoose
       
lecture - 43 - search api in node js with mongodb

lector - anson the developer 
in this video we have learn about get and post request how it work how to use middleware
anson the develop it is lect-1 or 2 videos 

when we use body in postman  - x-www-from-urllecoded 
this time we use middleeare app.use(express.urlencoded({extended:false}))
when we write it we can use x-www-from-urllecoded data

and we write middleeare app.use(express.json)
this time we use json row data 


lecture -4 Middleware
An express middleware is nothing more or less than just any ordinary function that has three parameters:Request & Response object,
and a function to invoke the next middleeare function

middleeare allow you to seprate your logic multiple difference functions,invoking each in sequential order

ex = We used the express.json() middleeare to handle request to detect body request with json, and the function the 
request object and attaches the proper payload to req.body

we were set key in postman header
aurtorization = '123'
then use condition 

